[package]
name = "learning_actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.20"
config = "0.11"
juniper = "0.10"
serde = { version = "1.0", features = ["derive"] }
mongodb = "2.1.0"
bson = "0.14.0"
futures = "0.3"
# pbkdf2 = "0.7"
# rand_core = { version = "0.6", features = ["std"] }